# sofar-mqtt

./: .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile_old  Dockerfile_older  LICENSE  README.md  client.py
.cargo/: config.toml
.github/workflows/: build_and_publish.yaml
src/: codec.rs  config.rs  discovery.rs  helpers.rs  homeassistant.rs  logger.rs  main.rs  messages.rs  models.rs  mqtt.rs  publisher.rs  serde_helpers.rs
