[package]
name = "sofar-mqtt"
version = "1.0.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
dotenv = "0.15.0"
enum-primitive-derive = "0.2.2"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.17"
macaddr = { version = "1.0.1", features = ["serde_std"] }
num-traits = "0.2.15"
rumqttc = "0.21.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-env = "0.1.1"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "net", "rt"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
